samples/_failures_safe/1761619597_769983_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25b1d912.c: In function ‘main’:
./samples/SAFE/__tmp_25b1d912.c:164: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_25b1d912.c:163:9: note: to match this ‘{’
  163 |         {EVENT_WRITE_COMPLETE, "", 0
      |         ^
./samples/SAFE/__tmp_25b1d912.c:163:9: error: expected declaration or statement at end of input
